# multi-agent-rag-system

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: launch.json
alembic/versions/: 001_initial.py
app/: config.py  dependencies.py  main.py  models.py  schemas.py
app/agents/: __init__.py  comparative_agent.py  critic_agent.py  decompose.py  factual_agent.py  graph.py  multihop_agent.py  router_agent.py  router_classifier.py  router_model.npz  utils.py
app/ingestion/: chunking.py  layout_detection.py  ocr.py  pipeline.py
app/retrieval/: vector_store.py
app/routers/: health.py  ingest.py  query.py
app/utils/: embeddings.py
data/: README.md  router_questions.jsonl
docs/: performance.md
eval/: README.md  corpus_manifest.json  golden_set.jsonl  ingest_corpus.py
eval/corpus/: appeals-procedures.md  morvanex-policy.md  plan-benefits.md  specialty-pharmacy.md  zeltavir-policy.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: AnswerDisplay.tsx  ConfidenceBadge.tsx  DocumentList.tsx  DocumentUpload.tsx  QueryInput.tsx  QueryTypeBadge.tsx  SourceCard.tsx  (+1 more)
scripts/: build-router-model.ps1  generate_router_data.py  setup-ollama.ps1  train_router_classifier.py
tests/: conftest.py  test_ablation_flags.py  test_agents.py  test_api.py  test_context_budget.py  test_decompose.py  test_dependencies.py  test_graph_budget.py  test_graph_refine.py  test_ingestion.py  test_router_classifier.py
(+4 files in other folders)
