[project]
name = "autonomous-document-intelligence-agent"
version = "0.1.0"
description = "Multi-agent RAG system with LangGraph, FastAPI, and pgvector"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "openai>=1.55.0",
    "numpy>=1.26.0",
    # OCR arrives with the [all-docs] extra, which pulls unstructured-pytesseract (their
    # own fork) plus pdf2image and unstructured-inference. Plain `pytesseract` and `Pillow`
    # were direct deps only because of the dead OCR stage; Pillow is still installed
    # transitively. The tesseract binary itself is apt-installed in the Dockerfile.
    "unstructured[all-docs]>=0.16.0",
    "python-magic>=0.4.27",
    "sentence-transformers>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
